# glide

./: .travis.yml  Cargo.toml  Cross.toml  Dockerfile  LICENSE  README.md  README.rst  TODO  base.css  build.rs  glide.flatpakref  index.html  justfile  meson.build  meson_options.txt  net.baseart.Glide.json  net.baseart.Glide.yaml  rustfmt.toml  style.css
.github/: FUNDING.yml
.github/workflows/: flatpak.yml  image.yml  rust.yml
build-aux/: 0001-Revert-play-Distinguish-missing-plugin-errors-and-in.patch  0001-Revert-video-overlay-composition-Declare-the-video-s.patch  0001-play-Fix-GstStream-leaks.patch  cargo-build.py  net.base_art.Glide.Devel.json  net.baseart.Glide.Devel.json  net.baseart.Glide.json
ci/: before_deploy.ps1  before_deploy.sh  script.sh
data/: custom-style.css  net.base-art.Glide.desktop  net.base_art.Glide.cmb  net.base_art.Glide.desktop  net.base_art.Glide.metainfo.xml  net.base_art.Glide.ui  net.baseart.Glide.appdata.xml  net.baseart.Glide.desktop  net.baseart.Glide.metainfo.xml  net.baseart.Glide.ui
hooks/: pre-commit
scripts/: cargo.sh  grabber.sh  new-release.sh  release.sh
src/: app.rs  app_factory.rs  channel_player.rs  cocoa_app.rs  cocoa_video_renderer.rs  common.rs  constants.rs  debug_infos.rs  errors.rs  gtk_app.rs  gtk_video_renderer.rs  iokit_sleep_disabler.rs  main.rs  osd.rs  player_context.rs  ui_context.rs  video_player.rs  video_renderer.rs  video_renderer_factory.rs
