[package]
authors = ["Philippe Normand <phil@base-art.net>"]
description = "Cross-platform media player based on GStreamer and GTK"
edition = "2021"
keywords = ["multimedia", "gstreamer", "gtk", "playback"]
license = "MIT"
name = "glide"
readme = "README.md"
repository = "https://github.com/philn/glide"
version = "0.6.1"

[dependencies]
directories = "4.0"
anyhow = "1"
gio = "0.18"
lazy_static = "1.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
sha2 = "0.10"
clap = { version = "4", features = ["derive", "help", "usage", "error-context"] }
gstreamer = { version = "0.21", features = ["v1_16"] }
gstreamer-play = { version = "0.21" }
gstreamer-video = { version = "0.21", features = ["v1_16"] }
gtk4 = { version = "0.7", features = ["v4_8"]}
gst-plugin-gtk4 = { version = "0.11" }
adw = { version = "0.5", package = "libadwaita", features = ["v1_2"] }
tempfile = "3"

[dependencies.self_update]
optional = true
version = "0.28"

[features]
self-updater = ["self_update"]
x11egl = ["gst-plugin-gtk4/x11egl"]
x11glx = ["gst-plugin-gtk4/x11glx"]
wayland = ["gst-plugin-gtk4/wayland"]

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"
