[package]
authors = ["Philippe Normand <phil@base-art.net>"]
description = "Cross-platform media player based on GStreamer and GTK"
edition = "2021"
keywords = ["multimedia", "gstreamer", "gtk", "playback"]
license = "MIT"
name = "glide"
readme = "README.md"
repository = "https://github.com/philn/glide"
version = "0.6.5"

[dependencies]
directories = "4.0"
anyhow = "1"
gio = "0.20"
lazy_static = "1.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
sha2 = "0.10"
clap = { version = "4", features = ["derive", "help", "usage", "error-context"] }
gstreamer = { version = "0.23", features = ["v1_20", "serde"] }
gstreamer-play = { version = "0.23" }
gstreamer-video = { version = "0.23", features = ["v1_20"] }
gstreamer-pbutils = "0.23"
gtk4 = { version = "0.9", features = ["v4_14"]}
gst-plugin-gtk4 = { version = "0.13", features = ["gtk_v4_14"] }
adw = { version = "0.7", package = "libadwaita", features = ["v1_5"] }
tempfile = "3"
async-channel = "2.1.1"
tar = "0.4"
regex = "1"
open = "5"
graphviz-rust = "0.7.2"

[build-dependencies]
vergen = "9"
vergen-gitcl = { version = "1", features = ["build", "cargo"]}


[dependencies.self_update]
optional = true
version = "0.28"

[features]
self-updater = ["self_update"]
x11egl = ["gst-plugin-gtk4/x11egl"]
x11glx = ["gst-plugin-gtk4/x11glx"]
wayland = ["gst-plugin-gtk4/wayland"]
dmabuf = ["gst-plugin-gtk4/dmabuf"]
devel = []

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"
